@@ -1,4 +1,6 @@
--  Add Spanish translation, thanks to [@lpdavidgc](https://github.com/lpdavidgc)
+- Hotfix for ANR issue on Android 11
+
+- Add Spanish translation, thanks to [@lpdavidgc](https://github.com/lpdavidgc)
 
 - Modify the grammar of the Japanese language pack, thanks to [@Qiaogun](https://github.com/Qiaogun)
 
